--- a/mobilewebsite2.html
+++ b/mobilewebsite2.html
@@ -47,7 +47,7 @@ On November 22, 2018, Realme became an emerging brand in the Indian market.[6] T
 On May 15, 2019, Realme held its first conference in Beijing to enter the Chinese domestic market, launching the Realme X, Realme X Lite and Realme X Master Edition.[8][9]</p>
      	</div>
      	<img src="https://imgs.search.brave.com/1DvDAq1Wmb2A_-8qW2v0OcjqynWjgviCZOymmh-KApo/rs:fit:684:225:1/g:ce/aHR0cHM6Ly90c2U0/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC5x/R0ZueEdhRGh3T0NQ/TDVDVWZXMzBnSGFG/SSZwaWQ9QXBp" class="brandsimg"/>
-     </div> <a href="mobilewebsite.html">
+     </div> <a href="index.html">
       <center><button class="btn btn-success"> Back</button></center>
 
  </div>
